--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ url: "https://www.sunlandranch.com/"
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: Kimberly Hart
+  name: Sunland Ranch
   email: kmbrlyhrt@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
